# Mandelbrot-Explorer

./: CMakeLists.txt  Mandelbrot Explorer.sln  README.md  makefile
Mandelbrot Explorer/: ColorChannelCtrl.cpp  ColorChannelCtrl.h  ColorChannelGraph.cpp  ColorChannelGraph.h  ColorControlPanel.cpp  ColorControlPanel.h  ColorDisplayPanel.cpp  ColorDisplayPanel.h  ColorPreviewPanel.cpp  ColorPreviewPanel.h  CustomResolutionDialog.cpp  CustomResolutionDialog.h  MandelControlPanel.cpp  MandelControlPanel.h  MandelFractal.cpp  MandelFractal.h  MandelShitWindow.cpp  MandelShitWindow.h  MandelView.cpp  MandelView.h  Mandelbrot Explorer.vcxproj  Mandelbrot Explorer.vcxproj.filters  MandelbrotExplorerWindow.cpp  MandelbrotExplorerWindow.h  cudaWorker.cuh  images.h  kernel.cu  main.cpp  main.h  mpir.lib  path_macros.props
include/: MandelExploreFrame.h  color_mapper.h  custom_resolution_dialog.h  fractal_render_panel.h  fractal_settings.h  images.h  main.h  mandel_explore_frame.h  mandel_properties_panel.h  palette_panel.h  regex_validator.h  wave_control.h  waves_color_mapper.h  waves_palette_panel.h
src/: MandelExploreFrame.cpp  custom_resolution_dialog.cpp  fractal_render_panel.cpp  main.cpp  mandel_explore_frame.cpp  mandel_properties_panel.cpp  palette_panel.cpp  regex_validator.cpp  wave_control.cpp  waves_color_mapper.cpp  waves_palette_panel.cpp
